--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ## Welcome to GitHub Pages
 
-asdasdasdYou can use the [editor on GitHub](https://github.com/alperenya/CS-353-Project-Group-29/edit/gh-pages/index.md) to maintain and preview the content for your website in Markdown files.
+You can use the [editor on GitHub](https://github.com/alperenya/CS-353-Project-Group-29/edit/gh-pages/index.md) to maintain and preview the content for your website in Markdown files.
 
 Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
 
