--- a/index.html
+++ b/index.html
@@ -1,37 +1,131 @@
-## Database
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Cs353 Database</title>
 
-You can use the [editor on GitHub](https://github.com/alperenya/CS-353-Project-Group-29/edit/gh-pages/index.md) to maintain and preview the content for your website in Markdown files.
+	<style type="text/css">
+		body{
+			background-color: #ffffff;
+			font-family: 'Roboto', sans-serif;
+			line-height: 2.5rem;
+		}
+		div{
+			margin: 5%;
+		}
+	</style>
 
-Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+</head>
+<body>
 
-### Markdown
+<div>
 
-Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
+<div style="text-align: center">
+	<h1>CS 353 TERM PROJECT</h1>
+	<h2>PROPOSAL REPORT</h2>
+	<h2>GROUP 29</h2>
+	<h2>HOSPITAL MANAGEMENT SYSTEM</h2>
+</div>
 
-```markdown
-Syntax highlighted code block
 
-# Header 1
-## Header 2
-### Header 3
+   <h3>Group Members</h3>
 
-- Bulleted
-- List
+<ul style="font-size: 1.3rem;">
+	<li>MEHMET ALPEREN YALÇIN - 21502273</li>
+	<li>OĞUZHAN ANGIN - 21500000</li>
+	<li>AHMET FURKAN AHİ - 21500000</li>
+</ul>
 
-1. Numbered
-2. List
 
-**Bold** and _Italic_ and `Code` text
 
-[Link](url) and ![Image](src)
-```
 
-For more details see [GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/).
+<ol style="border: 4px solid green;width: 40rem;">
+	<li><h3>Introduction</h3></li>
+	<li><h3>Project Description</h3></li>
+	<li>
+		<h3>Requirements</h3>
+		<ol>
+			<li><h3>Functional Requirements</h3></li>
+			<li><h3>Non-Functional Requirements</h3></li>
+			<li><h3>Constraints</h3></li>
+		</ol>
 
-### Jekyll Themes
+	</li>
+	<li><h3>Limitations</h3></li>
+	<li><h3>Entity-Relationship Model</h3></li>
+	<li><h3>WebPage Address</h3></li>
+</ol>
 
-Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/alperenya/CS-353-Project-Group-29/settings). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
 
-### Support or Contact
 
-Having trouble with Pages? Check out our [documentation](https://docs.github.com/categories/github-pages-basics/) or [contact support](https://support.github.com/contact) and we’ll help you sort it out.
+
+
+
+<h3>1. INTRODUCTION</h3>
+<p>
+  INSERT HERE
+</p>
+
+
+<h3>2. PROJECT DESCRIPTION</h3>
+<p>
+	INSERT HERE
+</p>
+
+<h3>3. REQUIREMENTS</h3>
+
+<h4>3.1	Functional Requirements</h4>
+
+<ol>
+	<li>INSERT HERE</li>
+</ol>
+
+
+
+
+
+
+
+<h4>3.2	Non-Functional Requirements</h4>
+
+<ol>
+  <li>INSERT HERE</li>
+</ol>
+
+
+
+<h4>3.3	Constraints</h4>
+
+<ul>
+	<li>PostgreSQL will be used as a DBM system for the project.</li>
+	<li>HTML, CSS; JavaScript, JQuery, Bootstrap will be used to develop the front-end of the project.</li>
+	<li>Django will be used to develop the back-end of the project.</li>
+</ul>
+
+
+<h3>4. LIMITATIONS</h3>
+
+<ul>
+	<li>Disease can be diagnosed by only doctors.</li>
+	<li>Drugs can be prescribed by only doctors.</li>
+	<li>Only laboratorians can do tests.</li>
+	<li>Only patients can demand appointments.</li>
+	<li>Only doctors can reach patient information.</li>
+	<li>Only patients can add allergies and chronic diseases.</li>
+</ul>
+
+
+
+
+<h3>5. ENTITY RELATIONSHIP MODEL</h3>
+
+
+<h3>6. WEBPAGE ADDRESS</h3>
+	
+	<a href="https://alperenya.github.io/CS-353-Project-Group-29/">https://alperenya.github.io/CS-353-Project-Group-29/</a>
+
+
+</div>
+</body>
+</html>
