--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Cs353 Database</title>
+	<title>CS 353</title>
 
 	<style type="text/css">
 		body{
@@ -39,8 +39,9 @@
 
 
 
-<hr>
 <ol style="border: 0px solid green;width: 40rem;">
+	<hr>
+
 	<li><h3>Introduction</h3></li>
 	<li><h3>Project Description</h3></li>
 	<li>
@@ -55,8 +56,10 @@
 	<li><h3>Limitations</h3></li>
 	<li><h3>Entity-Relationship Model</h3></li>
 	<li><h3>WebPage Address</h3></li>
+	
+	</hr>
+
 </ol>
-</hr>
 
 
 
