--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
 
 
 <h3>5. ENTITY RELATIONSHIP MODEL</h3>
-
+<div style="background-color: white;">
+	<img src="ER Diagram.png" style="width:100%">
+</div>
 
 <h3>6. WEBPAGE ADDRESS</h3>
 	
