--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CS 353</title>
+	<title>CS 353 TERM PROJEC GROUP 29</title>
 
 	<style type="text/css">
 		body{
@@ -42,20 +42,20 @@
 <ol style="border: 0px solid green;width: 40rem;">
 	<hr>
 
-	<li><h3>Introduction</h3></li>
-	<li><h3>Project Description</h3></li>
+	<li>Introduction</li>
+	<li>Project Description</li>
 	<li>
-		<h3>Requirements</h3>
+		Requirements
 		<ol>
-			<li><h3>Functional Requirements</h3></li>
-			<li><h3>Non-Functional Requirements</h3></li>
-			<li><h3>Constraints</h3></li>
+			<li>Functional Requirements</li>
+			<li>Non-Functional Requirements</li>
+			<li>Constraints</li>
 		</ol>
 
 	</li>
-	<li><h3>Limitations</h3></li>
-	<li><h3>Entity-Relationship Model</h3></li>
-	<li><h3>WebPage Address</h3></li>
+	<li>Limitations</li>
+	<li>Entity-Relationship Model</li>
+	<li>WebPage Address</li>
 	
 	<hr>
 
@@ -79,7 +79,7 @@
 
 <h3>3. REQUIREMENTS</h3>
 
-<h4>3.1	Functional Requirements</h4>
+<h4>	3.1 Functional Requirements</h4>
 
 <ol>
 	<li>INSERT HERE</li>
@@ -91,7 +91,7 @@
 
 
 
-<h4>3.2	Non-Functional Requirements</h4>
+<h4>	3.2 Non-Functional Requirements</h4>
 
 <ol>
   <li>INSERT HERE</li>
@@ -99,7 +99,7 @@
 
 
 
-<h4>3.3	Constraints</h4>
+<h4>	3.3 Constraints</h4>
 
 <ul>
 	<li>PostgreSQL will be used as a DBM system for the project.</li>
