--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CS 353 TERM PROJEC GROUP 29</title>
+	<title>CS 353 GROUP 29</title>
 
 	<style type="text/css">
 		body{
