--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 
 <h3>1. INTRODUCTION</h3>
 <p>
-  INSERT HERE
+This report describes various features of a hospital database system. The report contains the general purpose of the project, functional and non-functional requirements, limits and constraints, and finally, technical details and ER diagram regarding the project's programming.<br>
+            The report begins with a project description part prepared to give an idea to the reader. It briefly explains why such a project is essential and essential for a hospital. How and for what purpose the database can be used is answered.<br>
+            The report continues with the requirements part. As part of the requirements, functional, non-functional, and pseudo requirements are listed. Functional requirements are necessary to establish the functions, scope, and features of the project. In this subtitle, system and user permissions, ends and capacities are analyzed and clarified. Non-functional requirements include system authentication & security, user-friendliness, reliability, and capacity subheadings. The technologies to be used within the scope of the project are listed in the pseudo requirements section. The limitations and permissions of the system are specified in the limitations section.<br>
+            After determining the project requirements, the ER diagram of the project was added to the report to explain that it can be changed later. ER diagram is designed to meet the needs and functions of the system.
 </p>
 
 
