--- a/index.html
+++ b/index.html
@@ -88,7 +88,20 @@ This report describes various features of a hospital database system. The report
 <h4>	3.1 Functional Requirements</h4>
 
 <ol>
-	<li>Security & Authentication</li>
+	INSERT HERE
+	
+</ol>
+
+
+
+
+
+
+
+<h4>	3.2 Non-Functional Requirements</h4>
+
+<ol>
+  <li>Security & Authentication</li>
 	<ul>
 		<li>Access permissions should only be changed by the administrator.</li>
 		<li>Users should only be able to log in to the system with their own passwords and use the features provided by the system.</li>
@@ -109,19 +122,6 @@ This report describes various features of a hospital database system. The report
 	<ul>
 		<li>Since the system contains many components in a hospital, the provided big data must be properly hosted. </li>
 	</ul>
-	
-</ol>
-
-
-
-
-
-
-
-<h4>	3.2 Non-Functional Requirements</h4>
-
-<ol>
-  <li>INSERT HERE</li>
 </ol>
 
 
