--- a/index.html
+++ b/index.html
@@ -88,8 +88,23 @@ This report describes various features of a hospital database system. The report
 <h4>	3.1 Functional Requirements</h4>
 
 <ol>
-	INSERT HERE
-	
+	<ul>
+		<li>Persons must be able to log into the system and enter information such as name, surname, age, and telephone.</li>
+		<li>These information should be able to be edited.</li>
+ 		<li>A patient should be able to make an appointment with a doctor for a specific date.</li>
+ 		<li>A doctor should be able to look at the appointments he has.</li>
+ 		<li>A doctor should be able to view the patient's personal characteristics.</li>
+ 		<li>An examination should be carried out with the participation of the doctor and the patient on the date determined by the patient at the appointment. According to an examination result:</li>
+ 		<li>A doctor should be able to order a test from the patient.</li>
+ 		<li>A doctor should be able to diagnose.</li>
+ 		<li>A laboratory worker should be able to perform the tests of patients.</li>
+ 		<li>A test can contain many results. The test should have all of these components, and each component should have a normality interval.</li>
+ 		<li>After seeing the results of the tests, the doctor makes a particular diagnosis by choosing the appropriate disease / s from the database.</li>
+		<li>A doctor should be able to choose a treatment according to the diagnosis result.</li>
+		<li>A doctor should be able to prescribe according to diagnose results.</li>
+		<li>Prescription drugs should be changed to other appropriate alternative drugs.</li>
+
+	</ul>	
 </ol>
 
 
