--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 <ul style="font-size: 1.3rem;">
 	<li>MEHMET ALPEREN YALÇIN - 21502273</li>
-	<li>OĞUZHAN ANGIN - 21500000</li>
-	<li>AHMET FURKAN AHİ - 21500000</li>
+	<li>OĞUZHAN ANGIN - 21501910>
+	<li>AHMET FURKAN AHİ - 21501903>
 </ul>
 
 
